fixing nav column render issue resolves missing hover background color. resolves rounded corner overflow issue.

--- a/src/Components/Common/DataGrid/DataGrid.less
+++ b/src/Components/Common/DataGrid/DataGrid.less
@@ -54,7 +54,8 @@
       }
 
       & > .navColumn {
-        padding: 0;
+        overflow: hidden;
+        height: 100%;
       }
     }
   }
